--- a/Runtime/Unity.BBUnityCore2D.asmdef
+++ b/Runtime/Unity.BBUnityCore2D.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Unity.BBUnityCore2D",
+    "rootNamespace": "",
     "references": [
-        "GUID:90a66f91da0171342b2768710cbba427"
+        "Unity.BBUnityCore"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
