--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "com.bigbearstudios.bbunity-core2d",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "displayName": "BBUnity Core2D",
   "description": "",
   "unity": "2018.3",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/big-bear-studios-open-source/bbunitycore2d.git"
+    "url": "https://github.com/bigbearstudios-unity/core2d.git"
   },
-  "bugs": "https://gitlab.com/big-bear-studios-open-source/bbunitycore2d/-/issues",
+  "bugs": "https://github.com/bigbearstudios-unity/core2d/issues",
   "author": {
     "name": "Big Bear Studios",
     "email": "development@bigbearstudios.co.uk",
@@ -21,10 +21,7 @@
     }
   ],
   "dependencies": {
-    "com.bigbearstudios.bbunity-core": "5.0.0",
-    "com.bigbearstudios.bbunity-test-support": "1.1.0"
-  },
-  "scripts": {
-    "publish": ""
+    "com.bigbearstudios.bbunity-core": "5.1.1",
+    "com.bigbearstudios.bbunity-test-support": "2.1.1"
   }
 }
